--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ header {
 }
 
 #settings {
-    background: #460969;
+    background: var(--glass);
     border: 0;
     color: var(--glass);
     font-size: 1.2rem;
@@ -578,4 +578,5 @@ main {
         transform: translateY(-4px) scale(1.01);
     }
 }
+
 
