--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ header {
 }
 
 #settings {
-    background: var(--glass);
+    background: var(--text);
     border: 0;
     color: var(--glass);
     font-size: 1.2rem;
@@ -197,7 +197,7 @@ header {
 }
 
 #settings:hover {
-    background: var(--glass);
+    background: var(--text);
     transform: translateY(-1px);
     box-shadow: var(--shadow);
 }
@@ -578,5 +578,6 @@ main {
         transform: translateY(-4px) scale(1.01);
     }
 }
+
 
 
