--- a/style.css
+++ b/style.css
@@ -92,13 +92,16 @@ header {
 .header-content {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 1.25rem 1rem;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 1.5rem;
 }
-
+main {
+  margin-top: 0 !important;
+  padding-top: 8px !important;
+}
 .logo {
     display: flex;              
     align-items: center;        
@@ -643,6 +646,7 @@ main {
     box-shadow: var(--shadow-sm);
 }
 }
+
 
 
 
