--- a/style.css
+++ b/style.css
@@ -98,9 +98,20 @@ header {
     justify-content: space-between;
     gap: 1.5rem;
 }
+details,
+summary {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+#container {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+
 main {
   margin-top: 0 !important;
-  padding-top: 8px !important;
+  padding-top: 0 !important;
 }
 .logo {
     display: flex;              
@@ -646,6 +657,7 @@ main {
     box-shadow: var(--shadow-sm);
 }
 }
+
 
 
 
